--- a/index.html
+++ b/index.html
@@ -11,9 +11,25 @@
 <body>
     <div class="container">
         <h1>Rock Paper Scissors</h1>
-        <div class="score"></div>
-        <div class="game"></div>
-        <div class="opts"></div>
+        <div class="score">
+            <div class="pscore">
+                <h3>Player score</h3>
+                <p>0</p>
+            </div>
+            <div class="cscore">
+                <h2>Computer score</h2>
+                <p>0</p>
+            </div>
+        </div>
+        <div class="game">
+            <div class="player "><img  src="./assets/rock.png" alt=""></div>
+            <div class="com"><img src="./assets/scissor.png" alt=""></div>
+        </div>
+        <div class="opts">
+            <div class="op" id="r">Rock</div>
+            <div class="op" id="p">Paper</div>
+            <div class="op" id="s">Scissor</div>
+        </div>
     </div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
